fixed landingpage issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -40,8 +40,8 @@ body {
 }
 
 .resting-heart-mobile {
-  height: 300px;
-  width: 250px;
+  height: 280px;
+  width: 180px;
   margin: 10% 0;
   -webkit-transition: height 0.25s, width 0.25s, -webkit-transform 0.25s;
   transition: height 0.25s, width 0.25s, transform 0.25s;
@@ -50,6 +50,11 @@ body {
 .beating-heart {
   height: 500px;
   width: 350px;
+}
+
+.beating-heart-mobile {
+  height: 340px;
+  width: 230px;
 }
 
 .handwritting {
